# Mobius

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  jenkins-configure-and-build.bat  jenkins-copy-lastbuild.bat  jenkins-custom.bat  jenkins-run-tests.bat
doc/docalgo/: ALGO_doxyspec  CMakeLists.txt
doc/docalgo/pages/: 000_!_intro.md  000_01_getting-started.md  000_01_getting_started.md  000_intro.dox  001_!_architecture.md  001_01_memory-management.md  001_01_memory_management.md  002_!_primitives.md  002_01_bsurf.md  002_02_smesh.md  003_!_core-algos.md  003_01_bspl.md  003_01_surface-fairing.md  004_!_operators.md  004_01_surface-fairing.md  999_references.md
doc/docapi/: API_doxyspec  CMakeLists.txt  Doxyfile.in
src/bspl/: CMakeLists.txt  bspl.cpp  bspl.h  bspl_excMaxDegreeViolation.h
src/bspl/basis/: bspl_Decompose.cpp  bspl_Decompose.h  bspl_EffectiveN.cpp  bspl_EffectiveN.h  bspl_EffectiveNDers.cpp  bspl_EffectiveNDers.h  bspl_FindSpan.cpp  bspl_FindSpan.h  bspl_InsKnot.cpp  bspl_InsKnot.h  bspl_KnotMultiset.cpp  bspl_KnotMultiset.h  bspl_MultResolver.cpp  bspl_MultResolver.h  bspl_N.cpp  bspl_N.h  bspl_NDiscrete.cpp  bspl_NDiscrete.h  bspl_ParamDirection.h  bspl_RefineKnots.cpp  bspl_RefineKnots.h  bspl_UnifyKnots.cpp  bspl_UnifyKnots.h
src/bspl/laws/: bspl_ConstLaw.cpp  bspl_ConstLaw.h  bspl_HermiteLaw.cpp  bspl_HermiteLaw.h  bspl_ScalarLaw.cpp  bspl_ScalarLaw.h
src/bspl/parameterization/: bspl_KnotsAverage.cpp  bspl_KnotsAverage.h  bspl_KnotsSelection.h  bspl_KnotsUniform.h  bspl_ParamsCentripetal.cpp  bspl_ParamsCentripetal.h  bspl_ParamsChordLength.cpp  bspl_ParamsChordLength.h  bspl_ParamsSelection.h  bspl_ParamsUniform.cpp  bspl_ParamsUniform.h
src/cascade/: CMakeLists.txt  cascade.cpp  cascade.h  cascade_BSplineCurve.cpp  cascade_BSplineCurve.h  cascade_BSplineCurve3D.cpp  cascade_BSplineCurve3D.h  cascade_BSplineSurface.cpp  cascade_BSplineSurface.h  cascade_MultResolver.cpp  cascade_MultResolver.h  cascade_Triangulation.cpp  cascade_Triangulation.h
src/core/: CMakeLists.txt  core.cpp  core.h  core_excMaxGaussPtsExceeded.h  core_excMsgInit.h
src/core/base/: NCollection_BaseAllocator.cxx  NCollection_BaseAllocator.hxx  core_Continuity.h  core_IAlgorithm.cpp  core_IAlgorithm.h  core_ILogger.h  core_IPlotter.h  core_IProgressNotifier.h  core_Integral.cpp  core_Integral.h  core_Newton2x2.h  core_OBJECT.cpp  core_OBJECT.h  core_OPERATOR.cpp  core_OPERATOR.h  core_PackedMapOfInteger.cpp  core_PackedMapOfInteger.h  core_Precision.cpp  core_Precision.h  core_Ptr.cpp  core_Ptr.h  core_Smoothness.h  core_TrivariateFunc.h  core_TwovariateFunc.h  core_TwovariateFuncWithGradient.h  core_UnivariateFunc.h  core_Vars.h
src/core/blas/: core_SolveCovarianceEigens.cpp  core_SolveCovarianceEigens.h  core_SolveLinearSystem.cpp  core_SolveLinearSystem.h
src/core/primitives/: core_Axis.h  core_BBox.cpp  core_BBox.h  core_IsoTransform.cpp  core_IsoTransform.h  core_IsoTransformChain.cpp  core_IsoTransformChain.h  core_Quaternion.cpp  core_Quaternion.h  core_UV.cpp  core_UV.h  core_XYZ.cpp  core_XYZ.h
src/core/utils/: core_Chronometer.cpp  core_Chronometer.h  core_FileDumper.cpp  core_FileDumper.h  core_HeapAlloc.cpp  core_HeapAlloc.h  core_JSON.cpp  core_JSON.h  core_Journal.cpp  core_Journal.h  core_JournalTicket.cpp  core_JournalTicket.h  core_MemChecker.h  core_StringBuffer.cpp  core_StringBuffer.h  core_TimeStamp.cpp  core_TimeStamp.h  core_Timer.cpp  core_Timer.h  core_Utils.cpp  core_Utils.h
src/geom/: CMakeLists.txt  geom.h  geom_JSON.cpp  geom_JSON.h  geom_excBCurveCtor.h  geom_excBSurfaceCtor.h
src/geom/approximation/: geom_ApproxBSurf.cpp  geom_ApproxBSurf.h  geom_ApproxBSurfBi.cpp  geom_ApproxBSurfBi.h  geom_ApproxBSurfBj.cpp  geom_ApproxBSurfBj.h  geom_ApproxBSurfCoeff.h  geom_ApproxBSurfMij.cpp  geom_ApproxBSurfMij.h  geom_ApproxBSurfMji.cpp  geom_ApproxBSurfMji.h
src/geom/classifiers/: geom_PointOnLine.cpp  geom_PointOnLine.h
src/geom/clouds/: geom_BuildAveragePlane.cpp  geom_BuildAveragePlane.h  geom_PointCloud.cpp  geom_PointCloud.h  geom_PositionCloud.cpp  geom_PositionCloud.h  geom_SectionCloud.cpp  geom_SectionCloud.h  geom_SectionLine.cpp  geom_SectionLine.h  geom_VectorField.cpp  geom_VectorField.h
src/geom/common/: geom_BSurfNk.cpp  geom_BSurfNk.h  geom_MakeBicubicBSurf.cpp  geom_MakeBicubicBSurf.h  geom_OptimizeBSurfBase.h  geom_UnifyBCurves.cpp  geom_UnifyBCurves.h
src/geom/fairing/: geom_FairBCurve.cpp  geom_FairBCurve.h  geom_FairBCurveAij.cpp  geom_FairBCurveAij.h  geom_FairBCurveBi.cpp  geom_FairBCurveBi.h  geom_FairBCurveBj.cpp  geom_FairBCurveBj.h  geom_FairBCurveCoeff.h  geom_FairBSurf.cpp  geom_FairBSurf.h  geom_FairBSurfAkl.cpp  geom_FairBSurfAkl.h  geom_FairBSurfBk.cpp  geom_FairBSurfBk.h  geom_FairBSurfBl.cpp  geom_FairBSurfBl.h  geom_FairBSurfCoeff.h  geom_FairBSurfNN.cpp  geom_FairBSurfNN.h  geom_FairBSurfNk.cpp  geom_FairBSurfNk.h  geom_FairingAijFunc.cpp  geom_FairingAijFunc.h  geom_FairingBjFunc.cpp  geom_FairingBjFunc.h  geom_FairingCoeffFunc.h  geom_FairingMemBlocks.h
src/geom/interop/: geom_ReadAstra.cpp  geom_ReadAstra.h  geom_SaveAstra.cpp  geom_SaveAstra.h
src/geom/interpolation/: geom_InterpolateCurve.cpp  geom_InterpolateCurve.h  geom_InterpolateMultiCurve.cpp  (+5 more)
src/poly/: CMakeLists.txt  poly.h  poly_Attribute.h  poly_Edge.cpp  poly_Edge.h  poly_Flag.h  poly_Handles.h  poly_Jacobian.cpp  poly_Jacobian.h  poly_Mesh.cpp  poly_Mesh.h  poly_Quad.cpp  poly_Quad.h  poly_ReadOBJ.cpp  poly_ReadOBJ.h  poly_ReadPLY.cpp  poly_ReadPLY.h  poly_ReadSTL.cpp  poly_ReadSTL.h  poly_SurfAdapter.h  poly_Traits.h  poly_Triangle.cpp  poly_Triangle.h  poly_Vertex.cpp  poly_Vertex.h
src/test/: CMakeLists.txt  test.h  test_CaseIDs.h  test_CommonFacilities.cpp  test_CommonFacilities.h  test_Main.cpp  test_ProgressNotifier.cpp  test_ProgressNotifier.h
src/testEngine/: CMakeLists.txt  outcome.h  testEngine.h  testEngine_Launcher.cpp  testEngine_Launcher.h  testEngine_Macro.h  testEngine_TestCase.cpp  testEngine_TestCase.h
src/visu/: CMakeLists.txt  visu.h
src/visuApp/: CMakeLists.txt  visuApp_Main.cpp
(+508 files in other folders)
